New-Upload-1755854042013/objects/Profile_Login_Hours__c.object
<CustomObject>
    <fields>
        <fullName>Profile_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record (displays Profile Name)</description>
        <label>Profile Name Lookup</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Login Hours by Name</relationshipLabel>
        <relationshipName>Login_Hours_By_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record</description>
        <label>Profile Name</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Login Hours</relationshipLabel>
        <relationshipName>Login_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weekday_End__c</fullName>
        <description>Weekday end time</description>
        <label>Weekday End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekday_Start__c</fullName>
        <description>Weekday start time</description>
        <label>Weekday Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekend_End__c</fullName>
        <description>Weekend end time</description>
        <label>Weekend End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekend_Start__c</fullName>
        <description>Weekend start time</description>
        <label>Weekend Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Profile Login Hours</label>
    <nameField>
        <displayFormat>PLH-{0000}</displayFormat>
        <label>Login Hours Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Login Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>